--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
             android:name=".DramaDetailsActivity"
             android:screenOrientation="portrait" />
+        <receiver android:name=".NetworkChangedReceiver"/>
     </application>
 
 </manifest>
